--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@prisma/client": "^3.9.2",
     "@remix-run/react": "^1.1.1",
+    "@remix-run/serve": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.1",
-    "@remix-run/serve": "^1.1.1"
+    "remix": "^1.1.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.1"
+    "@remix-run/dev": "^1.1.1",
+    "prisma": "^3.9.2"
   },
   "engines": {
     "node": ">=14"
