--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "license": "",
   "prisma": {
-    "seed": "node --require esbuild-register prisma/seed.ts"
+    "seed": "node --require esbuild-register prisma/seed.js"
   },
   "scripts": {
     "build": "remix build",
@@ -16,6 +16,7 @@
     "@prisma/client": "^3.9.2",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
+    "bcryptjs": "^2.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1"
